# career-coach

./: README.md  app.py  index.html  pyproject.toml
database/: __init__.py  models.py  service.py
services/: interview_coach.py  resume_analyzer.py
utils/: pdf_parser.py
